# Compression

./: CMakeLists.txt
include/: CMakeLists.txt  array.h  binaryTree.h  binaryTrees.h  bitmanipulation.h  bitstring.h  genericBinaryTree.h  genericarray.h  graph.h  hashtable.h  includes.h  pointerintegertype.h  space.h  statemaschine.h  tree.h
source/: CMakeLists.txt  array.cpp  binaryTree.cpp  bitstring.cpp  graph.cpp
